--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,5 +1,17 @@
+<!DOCTYPE html>
+<html>
+<body>
+
+ <header>
+   <h1>Dummy frontend</h3>
+</header>
+<p>Please enter the URL to analyze, then hit the button to request the results.</p>
+
+Target URL:
 <form action="/request/" method="post">
-  Target URL:<br>
   <input type="text" name="url" size="45" value="www.example.com">
   <button type="submit" name="request">Request intel</button>
 </form>
+
+</body>
+</html>
