--- a/backend/index.html
+++ b/backend/index.html
@@ -1,5 +1,17 @@
-Target URL:<br>
+<!DOCTYPE html>
+<html>
+<body>
+
+ <header>
+   <h1>Backend</h3>
+</header>
+<p>Please enter the URL to analyze, then hit the button to request the results.</p>
+
+Target URL:
 <form action="/request/" method="post">
   <input type="text" name="url" size="45" value="www.example.backend.com">
   <button type="submit" name="request">Transfer</button>
 </form>
+
+</body>
+</html>
