--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,10 +7,20 @@
 </header>
 <p>Please enter the URL to analyze, then hit the button to request the results.</p>
 
-Target URL:
 <form action="/request/" method="post">
-  <input type="text" name="url" size="45" value="www.example.com">
-  <button type="submit" name="request">Request intel</button>
+  <p>
+    Customer ID:
+    <input type="text" name="id" size="45" value="example">
+  </p>
+  <p>
+    Target URL:
+    <input type="text" name="url" size="45" value="www.example.com">
+  </p>
+  <p>
+    Target domain:
+    <input type="text" name="domain" size="45" value="example.com">
+  </p>
+  <p> <button type="submit" name="request">Request intel results</button> </p>
 </form>
 
 </body>
