--- a/master/index.html
+++ b/master/index.html
@@ -9,7 +9,7 @@
 
 Target URL:
 <form action="/request/" method="post">
-  <input type="text" name="url" size="45" value="www.example.backend.com">
+  <input type="text" name="url" size="45" value="www.example.master.com">
   <button type="submit" name="request">Transfer</button>
 </form>
 
