Add input fields

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,11 +10,36 @@
 <form action="/request/" method="post">
   <p>
     Customer ID:
-    <input type="text" name="id" size="45" value="example">
+    </br><input type="text" name="id" size="45" value="example">
   </p>
   <p>
     Target URL:
-    <input type="text" name="url" size="45" value="www.example.com">
+    </br><input type="text" name="url" size="45" value="www.example.com">
+  </p>
+  <p>
+    VIP emails:
+    </br><input type="text" name="vip0" size="45" value="vip0@example.com">
+    </br><input type="text" name="vip1" size="45" value="vip1@example.com">
+    </br><input type="text" name="vip2" size="45" value="vip2@example.com">
+    </br><input type="text" name="vip3" size="45" value="vip3@example.com">
+    </br><input type="text" name="vip4" size="45" value="vip4@example.com">
+    </br><input type="text" name="vip5" size="45" value="vip5@example.com">
+  </p>
+  <p>
+    Business industry:
+    </br><input type="text" name="industry" size="45" value="Example product industry">
+  </p>
+  <p>
+    Number of employees:
+    </br><input type="text" name="employees" size="45" value="1234">
+  </p>
+  <p>
+    Countries:
+  </br><input type="text" name="countries" size="65" value="Mordor, Gondor, Rohan, Forodwaith">
+  </p>
+  <p>
+    Additional comments:
+    </br><input type="text" name="freetext" size="45" value="Your free text additional info for us">
   </p>
   <p> <button type="submit" name="request">Request intel results</button> </p>
 </form>
