Scan nmap scan page by default

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,7 +14,7 @@
   </p>
   <p>
     Target URL:
-    </br><input type="text" name="url" size="45" value="www.example.com">
+  </br><input type="text" name="url" size="45" value="http://scanme.nmap.org">
   </p>
   <p>
     VIP emails:
