Add products to be checked in CVE

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,37 +9,43 @@
 
 <form action="/request/" method="post">
   <p>
-    Customer ID:
-    </br><input type="text" name="id" size="45" value="example">
+    Customer ID:</br>
+    <input type="text" name="id" size="45" value="example">
   </p>
   <p>
-    Target URL:
-  </br><input type="text" name="url" size="45" value="http://scanme.nmap.org">
+    Target URL:</br>
+    <input type="text" name="url" size="45" value="http://scanme.nmap.org">
   </p>
   <p>
-    VIP emails:
-    </br><input type="text" name="vip0" size="45" value="vip0@example.com">
-    </br><input type="text" name="vip1" size="45" value="vip1@example.com">
-    </br><input type="text" name="vip2" size="45" value="vip2@example.com">
-    </br><input type="text" name="vip3" size="45" value="vip3@example.com">
-    </br><input type="text" name="vip4" size="45" value="vip4@example.com">
-    </br><input type="text" name="vip5" size="45" value="vip5@example.com">
+    VIP emails:</br>
+    <input type="text" name="vip0" size="45" value="vip0@example.com"></br>
+    <input type="text" name="vip1" size="45" value="vip1@example.com"></br>
+    <input type="text" name="vip2" size="45" value="vip2@example.com"></br>
+    <input type="text" name="vip3" size="45" value="vip3@example.com"></br>
+    <input type="text" name="vip4" size="45" value="vip4@example.com"></br>
+    <input type="text" name="vip5" size="45" value="vip5@example.com">
   </p>
   <p>
-    Business industry:
-    </br><input type="text" name="industry" size="45" value="Example product industry">
+    Software installed:</br>
+    <input type="text" name="vendor0" size="45" value="microsoft"><input type="text" name="product0" size="45" value="office"></br>
+    <input type="text" name="vendor1" size="45" value="opera"><input type="text" name="product1" size="45" value="opera_browser"></br>
+    <input type="text" name="vendor2" size="45" value="mozilla"><input type="text" name="product2" size="45" value="firefox">
   </p>
   <p>
-    Number of employees:
-    </br><input type="text" name="employees" size="45" value="1234">
+    Business industry:</br>
+    <input type="text" name="industry" size="45" value="Example product industry">
   </p>
   <p>
-    Countries:
-  </br><input type="text" name="countries" size="65" value="Mordor, Gondor, Rohan, Forodwaith">
+    Number of employees:</br>
+    <input type="text" name="employees" size="45" value="1234">
   </p>
   <p>
-    Additional comments:
-    </br><input type="text" name="freetext" size="45" value="Your free text additional info for us">
+    Countries:</br>
+    <input type="text" name="countries" size="65" value="Germany, Austria">
+  </p>
+  <p>
+    Additional comments:</br>
+    <input type="text" name="freetext" size="45" value="Your free text additional info for us">
   </p>
   <p> <button type="submit" name="request">Request intel results</button> </p>
 </form>
