--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,7 +14,7 @@
   </p>
   <p>
     Target URL:</br>
-    <input type="text" name="url" size="45" value="http://scanme.nmap.org">
+    <input type="text" name="url" size="45" value="http://testphp.vulnweb.com">
   </p>
   <p>
     VIP emails:</br>
